Структура проекта изменена. Добавле подпроект tzk

--- a/ktsuk/examples/CMakeLists.txt
+++ b/ktsuk/examples/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_executable(read_ktsuk_ini EXCLUDE_FROM_ALL read_ktsuk_ini.cpp)
 add_executable(write_ktsuk_ini EXCLUDE_FROM_ALL write_ktsuk_ini.cpp)
 
-add_custom_target(examples DEPENDS 
+add_custom_target(ktsuk_examples DEPENDS 
 				    read_ktsuk_ini
 				    write_ktsuk_ini)
