--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,5 +5,6 @@ set(CMAKE_CXX_FLAGS -std=c++11)
 
 include_directories(${PROJECT_SOURCE_DIR})
 
-add_subdirectory(${PROJECT_NAME}/ktsuk)
-add_subdirectory(examples)
+enable_testing()
+add_subdirectory(ktsuk)
+add_subdirectory(tzk)
